--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name             : "Daniel Rosato"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/profile_pic.jpg"
   bio              : "Systems Engineer."
   location         : "Italy"
   email            : "rosato.daniel@gmail.com"
